fixed backgroun on ios

--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,21 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+  font-family: consolasFont;
+  src: url(./assets/Consolas.woff);
+}
+
+@font-face {
+  font-family: consolasFont;
+  src: url(./assets/Consolas.woff);
+  font-weight: bold;
+}
+
 body {
     background-color: #000000;
-    font-family: Consolas; 
+    font-family: consolasFont; 
     font-size: 15px; 
     font-style: normal; 
     font-variant: normal; 
@@ -43,3 +55,11 @@ body {
     z-index: 2; /* Ensures content is above the overlay */
   }
   
+  @media only screen and (max-width: 600px) {
+    .overlay-container {
+   
+      
+      background-attachment: scroll;
+  
+    }
+  }
